--- a/src/components/DesktopNav/DesktopNav.css
+++ b/src/components/DesktopNav/DesktopNav.css
@@ -13,8 +13,13 @@
   border: 1px solid var(--primary-color);
   outline: 2px solid var(--secondary-color);
   outline-offset: 4px;
-  background-color: red;
+  background-color: var(--action-color);
+  box-shadow:30px -30px 30px inset var(--action-color);
   /* hm */
+}
+.btn.show {
+  /* background-color: var(--action-color); */
+  box-shadow:30px 0px 30px inset var(--action-color);
 
 }
 .dropdown a {
@@ -22,14 +27,10 @@
 }
 .navbar a:focus {
   transition: 0.5s;
-  /* box-shadow: 0px 0px 145px inset white; */
-  /* color:var(--tertiary-color); */
-  /* text-shadow:-5px -15px 0px rgba(192, 62, 62,.5), 5px 15px 0px rgba(192, 62, 62,.5); */
-}
+ }
 
 .navbar .container-fluid {
   --bs-gutter-x: 2.5rem;
-
 }
 .desktopOnOrOff .dropdown-menu a {
   border: 0px solid red !important;
@@ -37,7 +38,6 @@
   text-decoration: none;
   outline: none;
   background: none;
-  /* Change this back if I want BG color for tabs */
 }
 .desktopOnOrOff .dropdown-menu a:not(:first-of-type a) {
   /* padding: var(--bs-dropdown-item-padding-y) var(--bs-dropdown-item-padding-x); */
@@ -56,12 +56,9 @@
   color: black !important;
 }
 .dropdown .btn {
-  /* background-color: var(--primary-color); */
   border-radius: none !important;
 }
-/* .dropdown-item targets the nav bar links that drop down */
 .dropdown-item {
-  /* color: hotpink !important; */
   color: var(--primary-color) !important;
 }
 .dropdown-item:hover {
@@ -69,11 +66,9 @@
   background: none;
   font-weight: initial !important;
 }
-.nav {
-  /* --bs-nav-link-hover-color: rgb(36, 107, 45); */
-  /* --bs-nav-link-hover-color: var(--tertiary-color); */
-  --bs-nav-link-hover-color: white;
 
+.nav {
+  --bs-nav-link-hover-color: #ccd062;
   display: flex;
   flex-wrap: nowrap;
 }
@@ -82,8 +77,8 @@
 }
 .navbar a:hover:not(.dropdown-menu, .container a) {
   color: var(--primary-color);
-  border: 1px solid firebrick;
-  box-shadow: 0px 0px 3px firebrick;
+  border: 1px solid var(--action-color);
+  box-shadow: 0px 0px 3px var(--action-color);
   text-shadow: 0px 0px 1px black;
 }
 .navbar a:active {
@@ -100,6 +95,8 @@
     padding: 12px 20px;
   }
 }
+
+
 @media only screen and (max-width: 1000px) {
   .desktopOnOrOff a {
     font-size: 90%;
@@ -152,9 +149,6 @@
     padding-right: 25px;
     margin-right: 15px;
     margin-left: 15px;
-  }
-  .coldAndPro {
-    /* justify-content: center !important; */
   }
   .desktopOnOrOff a {
     font-size: 70%;
